# rs-colors

./: Makefile.am  README  README.md  adobe-rgb.lisp  asd-components.sh  black-body.lisp  cie-lab.lisp  cie-lch.lisp  cie-luv.lisp  cie-rgb.lisp  cie-standard-observer.lisp  cie-white-points.lisp  cie-xyy.lisp  cie-xyz.lisp  cielab.lisp  cielch.lisp  cieluv.lisp  ciergb.lisp  ciexyy.lisp  ciexyz.lisp  color-difference.lisp  color-matching-functions.lisp  configure.ac  generate-doc.lisp  generic-cmy.lisp  generic-cmyk.lisp  generic-rgb.lisp  io.lisp  rs-colors-internal.asd  rs-colors-internal.asd.in  rs-colors-internal.lisp  rs-colors.asd  rs-colors.asd.in  rs-colors.lisp  srgb.lisp  tests.lisp  types.lisp  utilities.lisp  wide-gamut-rgb.lisp
dictionaries/: Makefile.am  html-colors.asd  html-colors.lisp  material-io-colors.asd  material-io-colors.lisp  ral-colors.asd  ral-colors.lisp  ral-design-colors.asd  ral-design-colors.lisp  rs-colors-dictionary.asd  rs-colors-dictionary.lisp  rs-colors-html.asd  rs-colors-html.lisp  rs-colors-material-io.asd  rs-colors-material-io.lisp  rs-colors-ral-design.asd  rs-colors-ral-design.lisp  rs-colors-ral.asd  rs-colors-ral.lisp  rs-colors-svg.asd  rs-colors-svg.lisp  rs-colors-tango.asd  rs-colors-tango.lisp  rs-colors-x11.asd  rs-colors-x11.lisp  svg-colors.asd  svg-colors.lisp  tango-colors.asd  tango-colors.lisp  x11-colors.asd  x11-colors.lisp
doc/: Makefile.am  package.texi  rs-colors-conversion.tex  rs-colors.info  rs-colors.texi  rs-texinfo.texi  texinfo.tex  texinfo.tex.diff
doc/api/: Makefile.am  rs-colors-html.html  rs-colors-html.txt  rs-colors-material-io.html  rs-colors-material-io.txt  rs-colors-ral-design.txt  rs-colors-ral.html  rs-colors-ral.txt  rs-colors-svg.html  rs-colors-svg.txt  rs-colors-tango.html  rs-colors-tango.txt  rs-colors-x11.html  rs-colors-x11.txt  rs-colors.html  rs-colors.txt
doc/rs-colors-images/: Makefile.am
misc/: GNUmakefile  cie_1931_standard_observer.txt  cie_1964_standard_observer.txt  color_matching_functions.m  srgb-color-cube.csv  srgb-color-cube.lisp  srgb_color_cube.m
